--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,13 @@
   --breakpoint-xs: 12.5rem; /* 200px */
 }
 
+
 /* custom styling */
 .inputbox {
   @apply w-full border border-box-outline rounded-lg px-3 py-2 focus:outline-none;
 }
 .wrapper {
-  @apply max-w-7xl mx-auto my-0 px-8 py-3;
+  @apply max-w-[1600px] mx-auto my-0 px-6 py-2;
 }
 .auth-btn {
   @apply w-full bg-main-blue text-white py-2 rounded-lg hover:bg-mouse-pressed-blue transition-colors duration-200 cursor-pointer;
@@ -57,5 +58,5 @@
   @apply text-primary-text hover:text-hover-blue;
 }
 .Mobile-nav-link {
-  @apply block text-primary-text hover:text-main-blue transition block text-left py-2 px-4 hover:bg-primary6-blue rounded;
+  @apply block text-primary-text hover:text-main-blue transition text-left py-2 px-4 hover:bg-primary6-blue rounded;
 }
