--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 /* primary font - General Sans */
 @import url("https://fonts.cdnfonts.com/css/general-sans");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;600;700&display=swap");
 @import "tailwindcss";
 
 @theme {
   /* colors */
+
   --color-primary: oklch(0.6209 0.1802 257.04);
+  --color-neutral: oklch(0.3119 0.0045 247.97);
   --color-mouse-pressed-blue: oklch(0.4123 0.1717 262.75);
   --color-main-blue: oklch(0.5146 0.2025 262.8);
   --color-hover-blue: oklch(0.69 0.1623 263.67);
@@ -22,19 +25,31 @@
 
   /* font */
   --font-general-sans: "General Sans", sans-serif;
+  --font-noto-serif: "Noto Serif", serif;
 
   /* responsive */
   --breakpoint-xs: 12.5rem; /* 200px */
 }
 
+.h1 {
+  @apply text-4xl font-medium mb-4;
+}
+
+.h2 {
+  @apply text-2xl font-medium mb-1;
+}
 
 /* custom styling */
 .inputbox {
   @apply w-full border border-box-outline rounded-lg px-3 py-2 focus:outline-none;
 }
-.wrapper {
-  @apply max-w-[1600px] mx-auto my-0 px-6 py-2;
+.wrapper2 {
+  @apply max-w-[1600px] mx-auto my-0 px-6 py-30;
 }
+.wrapper {
+  @apply max-w-full mx-auto my-0 px-4 sm:px-6 md:px-8 overflow-x-hidden;
+}
+
 .auth-btn {
   @apply w-full bg-main-blue text-white py-2 rounded-lg hover:bg-mouse-pressed-blue transition-colors duration-200 cursor-pointer;
 }
