--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,10 @@
   @apply w-full border border-box-outline rounded-lg px-3 py-2 focus:outline-none;
 }
 .wrapper2 {
-  @apply max-w-[1600px] mx-auto my-0 px-6 py-30;
+  @apply max-w-[1600px] mx-auto my-0 px-6 ;
 }
 .wrapper {
-  @apply max-w-full mx-auto my-0 px-4 sm:px-6 md:px-8 overflow-x-hidden;
+  @apply max-w-full mx-auto my-10 px-4 sm:px-6 md:px-8 overflow-x-hidden;
 }
 
 .auth-btn {
