--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,6 @@
 .Mobile-nav-link {
   @apply block text-primary-text hover:text-main-blue transition text-left py-2 px-4 hover:bg-primary6-blue rounded;
 }
+.related-section {
+  @apply text-gray-400 hover:text-gray-900 font-medium transition-colors;
+}
