--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 }
 
 .h1 {
-  @apply text-4xl font-medium mb-8;
+  @apply xs:text-2xl md:text-4xl font-medium mb-8;
 }
 
 .h2 {
@@ -44,10 +44,10 @@
   @apply w-full border border-box-outline rounded-lg px-3 py-2 focus:outline-none;
 }
 .wrapper2 {
-  @apply max-w-[2000px] mx-auto my-0 px-6 ;
+  @apply max-w-[2000px] mx-auto my-0 px-6;
 }
 .wrapper {
-  @apply max-w-full mx-auto my-10 px-4 sm:px-6 md:px-8 overflow-x-hidden;
+  @apply max-w-[1800px] mx-auto px-4 py-3;
 }
 
 .auth-btn {
@@ -77,4 +77,11 @@
 }
 .related-section {
   @apply text-gray-400 hover:text-gray-900 font-medium transition-colors;
+}
+
+.chart-analysis-heading {
+  @apply xs:text-base lg:text-xl font-semibold mt-4;
+}
+.chart-analysis-paragraph {
+  @apply text-gray-700 xs:text-sm lg:text-lg mb-4 xs:leading-6 md:leading-8;
 }
